--- a/AkkaAsyncServiceCalls.ServiceSender/appsettings.json
+++ b/AkkaAsyncServiceCalls.ServiceSender/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=./;Initial Catalog=Messages;Integrated Security=True"
+    "Default": "Data Source=(local);Initial Catalog=Messages;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
